# erpnext-salestexts

./: README.md  pyproject.toml
sales_texts/: hooks.py  modules.txt
sales_texts/fixtures/: custom_field.json
sales_texts/salestexts/doctype/sales_docs/: sales_docs.js  sales_docs.py
sales_texts/salestexts/doctype/sales_text_template/: sales_text_template.js  sales_text_template.json  sales_text_template.py  test_sales_text_template.py
